B-4: About us page

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Portfolio</title>
   </head>
-  <body class="overflow-hidden-x">
+  <body class="overflow-hidden-x base-color">
     <div id="root"></div>
   </body>
 </html>
